[build-system]
build-backend = "scikit_build_core.build"
requires = [
  "scikit-build-core",
  "pybind11"
]

[project]
dependencies = [
  "click>=8.1.3",
  "verstr>=0.1.2"
]
dynamic = ["version"]
name = "ComPASS"
urls.git = "https://gitlab.com/compass/compass-v4/compass"
urls.documentation = "https://charms.gitlabpages.inria.fr/ComPASS/"
maintainers = [
  { name = "BRGM", email="compass@brgm.fr"},
  { name = "INRIA", email="roland.masson@inria.fr" }
]
license.file = "LICENSE.rst"

[tool.scikit-build]
build-dir = "_skbuild/{wheel_tag}-{build_type}"
minimum-version = "0.5.1"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["_version.py", "version_info"]

[tool.setuptools_scm]
write_to = "ComPASS/_version.py"
