[metadata]
name = ComPASS
author = BRGM/INRIA and various contributors
author_email = compass@brgm.fr
description = A parallel multiphase multicomponents simulator.
long_description = file: README.rst
license = GPLv3/CeCILLv2.1
url= https://charms.gitlabpages.inria.fr/ComPASS


[options]
python_requires = >=3.7
# we don't add mpi4py and petsc4py so as not to trigger compilations
install_requires =
    click
    numpy>=1.21
    numba!=0.55.2
    inept<0.2
    MeshTools
    pyyaml
    sortedcontainers
    verstr
    vtkwriters
# packages must be listed in setup.py to be intercepted by scikit-build
# cf. https://scikit-build.readthedocs.io/en/latest/usage.html#setuptools-options
